--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,5 +3,9 @@
 }
 
 .productsContainer{
-    
+    display: flex;
+    margin: auto;
+    /* border: 2px red solid; */
+    width: 53%;
+    flex-wrap: wrap;
 }
