--- a/src/css/App.css
+++ b/src/css/App.css
@@ -23,20 +23,15 @@ body {
 
 }
 
-@media screen and (max-width: 1920px) and (max-height: 1080px) {
-    body {
-        width: 100%;
-    }
-}
 
 @media screen and (max-width: 1536px) and (max-height: 864px) {
-    body {
-        width: 100%;
+    .img-size{
+        width: 155px;
     }
 }
 
 @media screen and (max-width: 360px) and (max-height: 780px) {
-    body {
-        width: 100%;
+    .img-size {
+        width: 100px;
     }
 }
