--- a/src/css/App.css
+++ b/src/css/App.css
@@ -12,6 +12,7 @@ body {
     /* border: 2px red solid; */
     width: 53%;
     flex-wrap: wrap;
+    font-size: 10px;
 }
 
 .pageButton {
@@ -32,6 +33,13 @@ body {
 
 @media screen and (max-width: 360px) and (max-height: 780px) {
     .img-size {
-        width: 100px;
+        width: 25px;
+    }
+    .productsContainer {
+        font-size: 10px;
+    }
+    button{
+        width: 50px;
+        font-size: 10px;
     }
 }
