--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,16 @@ body {
     background-color: darkcyan;
 }
 
+#title{
+    color: yellow;
+}
+
+button{
+    width: 100%;
+    height: 30px;
+    background-color: antiquewhite;
+}
+
 .img-size {
     width: 200px;
 }
@@ -9,8 +19,14 @@ body {
 .productsContainer {
     display: flex;
     margin: auto;
-    width: 53%;
+    width: 53.5%;
     flex-wrap: wrap;
+    text-align: center;
+    gap: 2px;
+}
+
+.productsContainer div{
+    border: black solid 1px;
 }
 
 .pageButton {
@@ -20,22 +36,33 @@ body {
     width: 6%;
 }
 
+#addedProductsText{
+    margin: auto;
+    margin-top: 100px;
+    width: 50%;
+    text-align: center;
+}
+
+#addedProductsText button{
+    width: 200px;
+}
+
 
 @media screen and (max-width: 1536px) and (max-height: 864px) {
     .img-size{
-        width: 155px;
+        width: 150px;
     }
 }
 
 @media screen and (max-width: 360px) and (max-height: 780px) {
     .img-size {
-        width: 25px;
+        width: 50px;
     }
     .productsContainer {
         font-size: 10px;
     }
     button{
-        width: 50px;
+        width: 100px;
         font-size: 10px;
     }
 }
