--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,15 +2,24 @@ body {
     background-color: darkcyan;
 }
 
+
+
+
 #title {
     color: yellow;
 }
+
+
+
 
 button {
     width: 100%;
     height: 30px;
     background-color: antiquewhite;
 }
+
+
+
 
 /* -- Navbar css */
 .navbar {
@@ -24,6 +33,9 @@ button {
     z-index: 1;
 }
 
+
+
+
 .navbar a {
     color: rgb(3, 17, 2);
     font-size: 50px;
@@ -31,63 +43,108 @@ button {
     transition: .2s;
 }
 
+
+
+
 .navbar a:hover {
     color: rgb(235, 10, 10);
 }
 /* -- */
 
+
+
+
 /* -- Products elements css */
+
+
+
 
 .img-size {
     width: 200px;
 }
 
+
+
+
 .productsContainer {
     display: flex;
     margin: auto;
+    margin-right: 25%;
     width: 54.5%;
+    flex-flow: row;
     flex-wrap: wrap;
     text-align: center;
     gap: 2px;
 }
+
+
+
 
 .productsContainer div {
     border: black solid 1px;
     width: 200px;
 }
 
+
+
+
 .productsContainer div button:active {
     background-color: orange;
 }
 
+
+
+
 /* -- */
 
+
+
+
 /* -- Side cart display*/
+
+
+
 
 #cartDisplayTitle {
     color: black;
 }
 
+
+
+
 .cartDisplay {
+    box-sizing: border-box;
     text-align: center;
     background-color: green;
     border: 2px solid black;
-    position: absolute;
+    float: right;
     width: 380px;
-    left: calc(50% + 550px);
-    top: 150px;
+    margin-right: 60px;
+   
 }
 
+
+
+
 /* -- */
+
+
+
 
 /* -- Shopping cart div css */
 .cartDisplay h2 {
     color: cornsilk;
 }
 
+
+
+
 #shoppingCartTitle {
     color: black;
 }
+
+
+
 
 .shoppingCartText {
     background-color: green;
@@ -98,43 +155,63 @@ button {
     text-align: center;
 }
 
+
+
+
 .shoppingCartText h2 {
     color: cornsilk;
 }
+
+
+
 
 .shoppingCartText button {
     width: 200px;
     background-color: orange;
 }
 
+
+
+
 /* -- */
 
 
-@media screen and (max-width: 1536px) and (max-height: 864px) {
+
+
+
+
+
+
+@media screen and (max-width: 1536px) {
     .img-size {
         width: 150px;
     }
 
+
     .cartDisplay {
-        top: 100px;
-        left: calc(50% + 450px);
         width: 250px;
     }
 }
+
+
+
 
 @media screen and (max-width: 360px) and (max-height: 780px) {
     .img-size {
         width: 50px;
     }
 
+
     .productsContainer {
         font-size: 30px;
     }
+
 
     button {
         width: 200px;
         font-size: 30px;
     }
+
 
     .cartDisplay {
         font-size: 30px;
@@ -142,3 +219,8 @@ button {
         width: 100px;
     }
 }
+
+
+
+
+
