--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,24 +2,15 @@ body {
     background-color: darkcyan;
 }
 
-
-
-
 #title {
     color: yellow;
 }
-
-
-
 
 button {
     width: 100%;
     height: 30px;
     background-color: antiquewhite;
 }
-
-
-
 
 /* -- Navbar css */
 .navbar {
@@ -33,9 +24,6 @@ button {
     z-index: 1;
 }
 
-
-
-
 .navbar a {
     color: rgb(3, 17, 2);
     font-size: 50px;
@@ -43,28 +31,28 @@ button {
     transition: .2s;
 }
 
-
-
-
 .navbar a:hover {
     color: rgb(235, 10, 10);
 }
+
+.navbarCounter {
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 4px;
+    background: #eff6fb;
+    border: 2px solid #666;
+    color: #ff0000;
+    text-align: center;
+}
+
 /* -- */
 
-
-
-
 /* -- Products elements css */
-
-
-
 
 .img-size {
     width: 200px;
 }
-
-
-
 
 .productsContainer {
     display: flex;
@@ -77,40 +65,22 @@ button {
     gap: 2px;
 }
 
-
-
-
 .productsContainer div {
     border: black solid 1px;
     width: 200px;
 }
 
-
-
-
 .productsContainer div button:active {
     background-color: orange;
 }
 
-
-
-
 /* -- */
 
-
-
-
 /* -- Side cart display*/
-
-
-
 
 #cartDisplayTitle {
     color: black;
 }
-
-
-
 
 .cartDisplay {
     box-sizing: border-box;
@@ -120,15 +90,10 @@ button {
     float: right;
     width: 380px;
     margin-right: 60px;
-   
+
 }
 
-
-
-
 /* -- */
-
-
 
 
 /* -- Shopping cart div css */
@@ -136,15 +101,9 @@ button {
     color: cornsilk;
 }
 
-
-
-
 #shoppingCartTitle {
     color: black;
 }
-
-
-
 
 .shoppingCartText {
     background-color: green;
@@ -155,31 +114,16 @@ button {
     text-align: center;
 }
 
-
-
-
 .shoppingCartText h2 {
     color: cornsilk;
 }
-
-
-
 
 .shoppingCartText button {
     width: 200px;
     background-color: orange;
 }
 
-
-
-
 /* -- */
-
-
-
-
-
-
 
 
 @media screen and (max-width: 1536px) {
@@ -187,14 +131,10 @@ button {
         width: 150px;
     }
 
-
     .cartDisplay {
         width: 250px;
     }
 }
-
-
-
 
 @media screen and (max-width: 360px) and (max-height: 780px) {
     .img-size {
@@ -206,12 +146,10 @@ button {
         font-size: 30px;
     }
 
-
     button {
         width: 200px;
         font-size: 30px;
     }
-
 
     .cartDisplay {
         font-size: 30px;
@@ -219,8 +157,3 @@ button {
         width: 100px;
     }
 }
-
-
-
-
-
