--- a/src/css/App.css
+++ b/src/css/App.css
@@ -136,24 +136,42 @@ button {
     }
 }
 
-@media screen and (max-width: 360px) and (max-height: 780px) {
+@media screen and (max-width: 400px) {
     .img-size {
         width: 50px;
     }
 
+    .navbar a{
+        font-size: 20px;
+    }
 
     .productsContainer {
-        font-size: 30px;
+        font-size: 10px;
+        width: 250px;
+    }
+
+    .productsContainer div {
+        border: black solid 1px;
+        width: 100px;
     }
 
     button {
-        width: 200px;
-        font-size: 30px;
+        width: 100px;
+        font-size: 10px;
     }
 
     .cartDisplay {
-        font-size: 30px;
-        left: 0;
-        width: 100px;
+        font-size: 10px;
+        margin-right: 0;
+        width: 60px;
+    }
+
+    .shoppingCartText {
+        width: 70%;
+    }
+    
+    .shoppingCartText button {
+        width: 120px;
+        background-color: orange;
     }
 }
